--- a/src/app/shared/components/contact-us/contact-us.component.html
+++ b/src/app/shared/components/contact-us/contact-us.component.html
@@ -66,14 +66,14 @@
                                 </div>
                                 <div class="col-12">
                                     <button [disabled]="contactForm.invalid"
-                                        (click)="submit()" class="btn button-success" type="submit">{{'button.actions.Submit' | translate}}</button>
+                                        (click)="submit()" class="button-success" type="submit">{{'button.actions.Submit' | translate}}</button>
                                 </div>
                             </form>
                         </div>
                         <div class="col-md-6 col-xs-12">
                             <div class="row">
                                 <div class="col-xs-12 info">
-                                    <div>
+                                    <div *ngIf="country_id === 1">
                                         <span>
                                             <fa-icon [icon]="faPhone" class="user-phone"></fa-icon>
                                         </span>
@@ -87,7 +87,7 @@
                                         {{contacts.contact_email}}
 
                                     </div>
-                                    <div>
+                                    <div *ngIf="country_id === 1">
                                         <span>
                                             <fa-icon [icon]="faWhatsappSquare"></fa-icon>
                                         </span>
@@ -105,7 +105,8 @@
                                 </div>
                                 <div class="col-xs-12">
                                     <div class="map">
-                                        <div class="mapouter"><div class="gmap_canvas"><iframe width="383" height="325" id="gmap_canvas" src="https://maps.google.com/maps?q=%D8%A7%D9%84%D9%82%D8%B1%D9%86%D9%81%D9%84%20%D8%A7%D9%84%D8%AA%D8%AC%D9%85%D8%B9%20%D8%A7%D9%84%D8%AE%D8%A7%D9%85%D8%B3&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;text-align:right;height:325px;width:383px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:325px;width:383px;}</style></div></div>
+                                        <div class="mapouter"><div class="gmap_canvas"><iframe width="383" height="325" id="gmap_canvas" src="https://maps.google.com/maps?q=%D8%A7%D9%84%D9%82%D8%B1%D9%86%D9%81%D9%84%20%D8%A7%D9%84%D8%AA%D8%AC%D9%85%D8%B9%20%D8%A7%D9%84%D8%AE%D8%A7%D9%85%D8%B3&t=&z=15&ie=UTF8&iwloc=&output=embed" 
+                                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;text-align:right;height:325px;width:383px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:325px;width:383px;}</style></div></div>
                                     </div>
                                 </div>
                             </div>
