--- a/src/app/shared/components/favourites/favourites.component.scss
+++ b/src/app/shared/components/favourites/favourites.component.scss
@@ -94,7 +94,7 @@
                         .card-title {
                             color: #f55441;
                         }
-                        box-shadow: 8px 3px 30px;
+                        box-shadow: 0px 0px 30px #184d47;
                         transition: 0.3s;
                     }
                     .space-between{
